Add google map functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.datasource.password = ${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 
+google.api.key =AIzaSyCwd6wX5c3qXdCNfVOxxwj2_zkg1Dt7EGs
+
 management.endpoints.web.exposure.include=*
