--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,32 @@
 spring.application.name=ridingBookingSystem
 
-spring.datasource.url = ${DB_URL}
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.username = ${DB_USERNAME}
-spring.datasource.password = ${DB_PASSWORD}
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto = update
 
-management.endpoints.web.exposure.include=*
+spring.datasource.url=jdbc:mysql://localhost:3306/RidingBookingSystem
+spring.datasource.username=root
+spring.datasource.password=mecaps
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+#spring.datasource.url = ${DB_URL}
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+#spring.datasource.username = ${DB_USERNAME}
+#spring.datasource.password = ${DB_PASSWORD}
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto = update
+#
+#management.endpoints.web.exposure.include=*
+
+
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = ahmedmudassir9594@gmail.com
+spring.mail.password = xonhzxfykalxrvhx
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
