--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=ridingBookingSystem
 
 
-#spring.datasource.url = ${DB_URL}
-#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-#spring.datasource.username = ${DB_USERNAME}
-#spring.datasource.password = ${DB_PASSWORD}
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto = update
-#
-#management.endpoints.web.exposure.include=*
+spring.datasource.url = ${DB_URL}
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.username = ${DB_USERNAME}
+spring.datasource.password = ${DB_PASSWORD}
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto = update
+google.api.key =AIzaSyA4hVGEV4gf3qOdeSV71gvWL9bG-lGV2Vw
+
+management.endpoints.web.exposure.include=*
 
 
 
