--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 
 management.endpoints.web.exposure.include=*
+google.api.key =AIzaSyA4hVGEV4gf3qOdeSV71gvWL9bG-lGV2Vw
 
 
 
