completed payment gateway functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.datasource.password = ${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 
+
+
+# Razorpay keys (use test keys)
+razorpay.key_id=${RAZORPAY_KEY_ID}
+razorpay.key_secret=${RAZORPAY_KEY_SECRET}
+
+
 management.endpoints.web.exposure.include=*
 
 
